# MeMo_Bot_Pro_iOS

./: .gitignore  .replit  ADMIN_SETUP.md  DEPLOYMENT.md  README.md  TELEGRAM_MINIAPP_SETUP.md  build_miniapp.sh  generate_report.py  main.py  pyproject.toml  replit.md  requirements.txt  start.sh  start_production.sh  user_settings.xlsx
client/: package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css
client/src/components/: ActionButton.jsx  BottomNav.jsx  CryptoAssetRow.jsx
client/src/hooks/: useMarketData.js
client/src/pages/: HistoryPage.jsx  SignalsPage.jsx  TradePage.jsx  WalletPage.jsx
client/src/utils/: api.js  telegram.js
src/memo_bot_pro/: __init__.py  binance_client.py  cli.py  config.py  database.py  monitor.py  profit_calculator.py  reports.py  scalping_signals.py  signal_generator.py  telegram_bot.py  telegram_bot_enhanced.py  trading_commands.py  translations.py  user_storage.py  web_app.py
src/memo_bot_pro/templates/: monitor.html
